--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sart Of Project</title>
+    <title>Foods-Website</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="google.png" />
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/575/575577.png"
+    />
   </head>
   <body>
     <h1>start of project</h1>
