--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
     />
   </head>
   <body>
-    <h1>start of project</h1>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <div class="navbar-Wrap"></div>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
