added navbar btn wrap with line and box

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
     <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar-Wrap"></div>
+      <div class="navbar-Btn-Wrap">
+        <div class="nav-Btn-Line"></div>
+        <div class="nav-Btn-Box"></div>
+      </div>
     </nav>
     <script src="script.js"></script>
   </body>
