added navlinks with li and a and content

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,17 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <div class="navbar-Wrap"></div>
+      <div class="navbar-Wrap">
+        <div class="navbar-Links">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Meals</a></li>
+            <li><a href="#">Burger</a></li>
+            <li><a href="#">Pizza</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
       <div class="navbar-Btn-Wrap">
         <div class="nav-Btn-Line"></div>
         <div class="nav-Btn-Box"></div>
