--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,26 @@
       <div class="navbar-Wrap">
         <div class="navbar-Links">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Meals</a></li>
-            <li><a href="#">Burger</a></li>
-            <li><a href="#">Pizza</a></li>
-            <li><a href="#">Contact</a></li>
+            <li>
+              <a href="#">Home</a
+              ><i id="nav-Icons nav-Icon-1" class="fa-solid fa-house"></i>
+            </li>
+            <li>
+              <a href="#">Meals</a
+              ><i id="nav-Icons nav-Icon-2" class="fa-solid fa-utensils"></i>
+            </li>
+            <li>
+              <a href="#">Burger</a
+              ><i id="nav-Icons nav-Icon-3" class="fa-solid fa-burger"></i>
+            </li>
+            <li>
+              <a href="#">Pizza</a
+              ><i id="nav-Icons nav-Icon-4" class="fa-solid fa-pizza-slice"></i>
+            </li>
+            <li>
+              <a href="#">Contact</a
+              ><i id="nav-Icons nav-Icon-5" class="fas fa-blender-phone"></i>
+            </li>
           </ul>
         </div>
       </div>
