small change in html tree

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,7 @@
         </div>
       </div>
       <div class="navbar-Btn-Wrap">
-        <div class="nav-Btn-Line"></div>
-        <div class="nav-Btn-Box"></div>
+        <div class="nav-Btn-Line"><div class="nav-Btn-Box"></div></div>
       </div>
     </nav>
     <script src="script.js"></script>
