small styling fix

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar active">
       <div class="navbar-Wrap">
         <div class="navbar-Links">
           <ul>
@@ -46,7 +46,7 @@
           </ul>
         </div>
       </div>
-      <div class="nav-Btn-Line"><div class="nav-Btn-Box"></div></div>
+      <div class="nav-Btn-Line active"><div class="nav-Btn-Box"></div></div>
     </nav>
     <script src="script.js"></script>
   </body>
