--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar active">
+    <nav class="navbar">
       <div class="navbar-Wrap">
         <div class="navbar-Links">
           <ul>
