changed name of script.js file to navbarLogic

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,6 @@
       </div>
       <div class="nav-Btn-Line active"><div class="nav-Btn-Box"></div></div>
     </nav>
-    <script src="script.js"></script>
+    <script src="navbarLogic.js"></script>
   </body>
 </html>
