--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
       </div>
       <div class="nav-Btn-Line active"><div class="nav-Btn-Box"></div></div>
     </nav>
+    <!--  javascript links -->
     <script src="navbarLogic.js"></script>
   </body>
 </html>
