--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           </ul>
         </div>
       </div>
-      <div class="nav-Btn-Line active"><div class="nav-Btn-Box"></div></div>
+      <div class="nav-Btn-Line"><div class="nav-Btn-Box"></div></div>
     </nav>
     <!--  javascript links -->
     <script src="navbarLogic.js"></script>
