--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,10 @@
       </div>
       <div class="nav-Btn-Line active"><div class="nav-Btn-Box"></div></div>
     </nav>
+    <!-- Header -->
+    <section class="header">
+      <div class="header-Wrap"></div>
+    </section>
     <!--  javascript links -->
     <script src="navbarLogic.js"></script>
   </body>
