added html tree for header title wrap and title text with text and classes

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,11 @@
     </nav>
     <!-- Header -->
     <section class="header">
-      <div class="header-Wrap"></div>
+      <div class="header-Wrap">
+        <div class="header-Title-Wrap">
+          <h1 class="header-Title-Text">Variety Of Foods</h1>
+        </div>
+      </div>
     </section>
     <!--  javascript links -->
     <script src="navbarLogic.js"></script>
