added html tree for header icon wrap  classes

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,9 @@
         <div class="header-Title-Wrap">
           <h1 class="header-Title-Text">Variety Of Foods</h1>
         </div>
+        <div class="header-Icon-Wrap">
+          <i id="header-Icon-Text"></i>
+        </div>
       </div>
     </section>
     <!--  javascript links -->
