added styling to header titles and header-Titles-Wrap

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
     <!-- Header -->
     <section class="header">
       <div class="header-Wrap">
-        <div class="header-Title-Wrap">
+        <div class="header-Titles-Wrap">
           <h1 class="header-Title-Text">Variety Of Foods</h1>
         </div>
-        <div class="header-Icon-Wrap">
+        <div class="header-Titles-Wrap">
           <i id="header-Icon-Text"></i>
         </div>
       </div>
