added all icons needed

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,16 @@
           <h1 class="header-Title-Text">Variety Of Foods</h1>
         </div>
         <div class="header-Titles-Wrap">
-          <i id="header-Icon-Text"></i>
+          <i id="header-Icons" class="fas fa-egg"></i>
+          <i id="header-Icons" class="fas fa-stroopwafel"></i>
+          <i id="header-Icons" class="fas fa-cheese"></i>
+          <i id="header-Icons" class="fas fa-hotdog"></i>
+          <i id="header-Icons" class="fas fa-drumstick-bite"></i>
+          <i id="header-Icons" class="fas fa-apple-alt"></i>
+          <i id="header-Icons" class="fas fa-ice-cream"></i>
+          <i id="header-Icons" class="fas fa-fish change"></i>
+          <i id="header-Icons" class="fas fa-cookie"></i>
+          <i id="header-Icons" class="fas fa-seedling"></i>
         </div>
       </div>
     </section>
