added new js file + connected it and also added comments

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
       </div>
     </section>
     <!--  javascript links -->
-    <script src="navbarLogic.js"></script>
+    <script type="module" src="headerLogic.js"></script>
+    <script type="module" src="navbarLogic.js"></script>
   </body>
 </html>
