--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,10 @@
         </div>
       </div>
     </section>
+    <!-- Meals -->
+    <section class="meals">
+      <div class="meals-Wrap"></div>
+    </section>
     <!--  javascript links -->
     <script type="module" src="headerLogic.js"></script>
     <script type="module" src="navbarLogic.js"></script>
