added meals top and top text wrap

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,11 @@
     </section>
     <!-- Meals -->
     <section class="meals">
-      <div class="meals-Wrap"></div>
+      <div class="meals-Wrap">
+        <div class="meals-Top">
+          <div class="meals-Top-Title-Wrap"></div>
+        </div>
+      </div>
     </section>
     <!--  javascript links -->
     <script type="module" src="headerLogic.js"></script>
