--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,9 @@
     <section class="meals">
       <div class="meals-Wrap">
         <div class="meals-Top">
-          <div class="meals-Top-Title-Wrap"></div>
+          <div class="meals-Top-Title-Wrap">
+            <h1 class="header-Title-Text">Popular Meals</h1>
+          </div>
         </div>
       </div>
     </section>
