added meals bottom and bottom wrap

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,9 @@
             <h1 class="header-Title-Text">Popular Meals</h1>
           </div>
         </div>
+        <div class="meals-Bottom">
+          <div class="meals-Bottom-Wrap"></div>
+        </div>
       </div>
     </section>
     <!--  javascript links -->
