added styling to meals bottom wrap and meal bookand meal img wrap

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,13 @@
           </div>
         </div>
         <div class="meals-Bottom">
-          <div class="meals-Bottom-Wrap"></div>
+          <div class="meals-Bottom-Wrap">
+            <div class="meal-Book">
+              <div class="meal-Book-Img-Wrap">
+                <img class="meal-Book-Img" src="" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
