added styling to meals

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
               </div>
             </div>
             <div class="meal-Book-Texts-Wrap">
-              <h3 class="meal-Book-Name"></h3>
+              <h3 class="meal-Book-Name">FISH</h3>
               <button class="meal-Book-Btn">Order Now</button>
             </div>
           </div>
