added styling for img

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,11 @@
           <div class="meals-Bottom-Wrap">
             <div class="meal-Book">
               <div class="meal-Book-Img-Wrap">
-                <img class="meal-Book-Img" src="" alt="" />
+                <img
+                  class="meal-Book-Img"
+                  src="./assets/card-img-1.png"
+                  alt=""
+                />
               </div>
               <div class="meal-Book-Texts-Wrap">
                 <h3 class="meal-Book-Name">FISH</h3>
