added second meal book

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,19 @@
                 <button class="meal-Book-Btn">Order Now</button>
               </div>
             </div>
+            <div class="meal-Book">
+              <div class="meal-Book-Img-Wrap">
+                <img
+                  class="meal-Book-Img"
+                  src="./assets/card-img-1.png"
+                  alt=""
+                />
+              </div>
+              <div class="meal-Book-Texts-Wrap">
+                <h3 class="meal-Book-Name">FISH</h3>
+                <button class="meal-Book-Btn">Order Now</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
