added content for book 3 and added alot of styling

--- a/src/index.html
+++ b/src/index.html
@@ -108,12 +108,12 @@
               <div class="meal-Book-Img-Wrap">
                 <img
                   class="meal-Book-Img"
-                  src="./assets/card-img-2.png"
+                  src="./assets/card-img-3.png"
                   alt=""
                 />
               </div>
               <div class="meal-Book-Texts-Wrap">
-                <h3 class="meal-Book-Name">CAKE</h3>
+                <h3 class="meal-Book-Name">LOBSTER</h3>
                 <button class="meal-Book-Btn">Order Now</button>
               </div>
             </div>
