--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,10 @@
         </div>
       </div>
     </section>
+    <!-- Menu -->
+    <section class="menu">
+      <div class="menu-Wrap"></div>
+    </section>
     <!--  javascript links -->
     <script type="module" src="headerLogic.js"></script>
     <script type="module" src="navbarLogic.js"></script>
