added html to the menu wrao tio and menu tio title wrap header title text

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,13 @@
     </section>
     <!-- Menu -->
     <section class="menu">
-      <div class="menu-Wrap"></div>
+      <div class="menu-Wrap">
+        <div class="menu-Top">
+          <div class="menu-Top-Title-Wrap">
+            <h1 class="header-Title-Text">Gallery</h1>
+          </div>
+        </div>
+      </div>
     </section>
     <!--  javascript links -->
     <script type="module" src="headerLogic.js"></script>
