added menu bottom and wrap

--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,9 @@
             <h1 class="header-Title-Text">Gallery</h1>
           </div>
         </div>
+        <div class="menu-Bottom">
+          <div class="menu-Bottom-Wrap"></div>
+        </div>
       </div>
     </section>
     <!--  javascript links -->
