--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,13 @@
           </div>
         </div>
         <div class="menu-Bottom">
-          <div class="menu-Bottom-Wrap"></div>
+          <div class="menu-Bottom-Wrap">
+            <div class="menu-Card">
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-1">PANCAKES</h1>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
