added styling to menu title

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
       <div class="menu-Wrap">
         <div class="menu-Top">
           <div class="menu-Top-Title-Wrap">
-            <h1 class="header-Title-Text">Gallery</h1>
+            <h1 class="menu-Title-Text">Gallery</h1>
           </div>
         </div>
         <div class="menu-Bottom">
