added before styling for the card

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
               <div class="menu-Card-Title-Wrap">
                 <h1 class="menu-Card-Text-1">PANCAKES</h1>
               </div>
-              <div class="menu-Card-Text-Wrap">
+              <div class="menu-Card-Title-Wrap">
                 <h1 class="menu-Card-Text-2">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Autem qui ullam rerum, perferendis quisquam dignissimos omnis
