added overall styling to the card and added img

--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,11 @@
         <div class="menu-Bottom">
           <div class="menu-Bottom-Wrap">
             <div class="menu-Card">
+              <img
+                class="menu-Card-Imgs"
+                src="./assets/gallery-img-1.jpg"
+                alt=""
+              />
               <div class="menu-Card-Title-Wrap">
                 <h1 class="menu-Card-Text-1">PANCAKES</h1>
               </div>
