added more styling to menu bottom wrap and menu bottom and also menu

--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,91 @@
                 </h1>
               </div>
             </div>
+            <div class="menu-Card">
+              <img
+                class="menu-Card-Imgs"
+                src="./assets/gallery-img-1.jpg"
+                alt=""
+              />
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-1">PANCAKES</h1>
+              </div>
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-2">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Autem qui ullam rerum, perferendis quisquam dignissimos omnis
+                  maxime, sequi totam temporibus
+                </h1>
+              </div>
+            </div>
+            <div class="menu-Card">
+              <img
+                class="menu-Card-Imgs"
+                src="./assets/gallery-img-1.jpg"
+                alt=""
+              />
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-1">PANCAKES</h1>
+              </div>
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-2">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Autem qui ullam rerum, perferendis quisquam dignissimos omnis
+                  maxime, sequi totam temporibus
+                </h1>
+              </div>
+            </div>
+            <div class="menu-Card">
+              <img
+                class="menu-Card-Imgs"
+                src="./assets/gallery-img-1.jpg"
+                alt=""
+              />
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-1">PANCAKES</h1>
+              </div>
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-2">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Autem qui ullam rerum, perferendis quisquam dignissimos omnis
+                  maxime, sequi totam temporibus
+                </h1>
+              </div>
+            </div>
+            <div class="menu-Card">
+              <img
+                class="menu-Card-Imgs"
+                src="./assets/gallery-img-1.jpg"
+                alt=""
+              />
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-1">PANCAKES</h1>
+              </div>
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-2">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Autem qui ullam rerum, perferendis quisquam dignissimos omnis
+                  maxime, sequi totam temporibus
+                </h1>
+              </div>
+            </div>
+            <div class="menu-Card">
+              <img
+                class="menu-Card-Imgs"
+                src="./assets/gallery-img-1.jpg"
+                alt=""
+              />
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-1">PANCAKES</h1>
+              </div>
+              <div class="menu-Card-Title-Wrap">
+                <h1 class="menu-Card-Text-2">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Autem qui ullam rerum, perferendis quisquam dignissimos omnis
+                  maxime, sequi totam temporibus
+                </h1>
+              </div>
+            </div>
           </div>
         </div>
       </div>
