--- a/src/index.html
+++ b/src/index.html
@@ -238,6 +238,7 @@
       </div>
     </section>
     <!--  javascript links -->
+    <script type="module" src="menuLogic.js"></script>
     <script type="module" src="headerLogic.js"></script>
     <script type="module" src="navbarLogic.js"></script>
   </body>
