--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
         </div>
         <div class="menu-Bottom">
           <div class="menu-Bottom-Wrap">
-            <div class="menu-Card">
+            <!-- <div class="menu-Card">
               <img
                 class="menu-Card-Imgs"
                 src="./assets/gallery-img-1.jpg"
@@ -232,7 +232,7 @@
                   maxime, sequi totam temporibus
                 </h1>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
