--- a/src/index.html
+++ b/src/index.html
@@ -237,6 +237,10 @@
         </div>
       </div>
     </section>
+    <!-- Contact -->
+    <section class="contact">
+      <div class="contact-Wrap"></div>
+    </section>
     <!--  javascript links -->
     <script type="module" src="menuLogic.js"></script>
     <script type="module" src="headerLogic.js"></script>
