added contact left and right

--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,10 @@
     </section>
     <!-- Contact -->
     <section class="contact">
-      <div class="contact-Wrap"></div>
+      <div class="contact-Wrap">
+        <div class="contact-Left"></div>
+        <div class="contact-Right"></div>
+      </div>
     </section>
     <!--  javascript links -->
     <script type="module" src="menuLogic.js"></script>
