added all elements needed for the left contact

--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,10 @@
     <!-- Contact -->
     <section class="contact">
       <div class="contact-Wrap">
-        <div class="contact-Left"></div>
+        <div class="contact-Left">
+          <h1 class="contact-Left-Text-1"></h1>
+          <h5 class="contact-Left-Text-2"></h5>
+        </div>
         <div class="contact-Right"></div>
       </div>
     </section>
