added text for left text 1 and 2

--- a/src/index.html
+++ b/src/index.html
@@ -241,8 +241,10 @@
     <section class="contact">
       <div class="contact-Wrap">
         <div class="contact-Left">
-          <h1 class="contact-Left-Text-1"></h1>
-          <h5 class="contact-Left-Text-2"></h5>
+          <h1 class="contact-Left-Text-1">SIGN ME UP</h1>
+          <h5 class="contact-Left-Text-2">
+            BE THE FIRST TO KNOW ABOUT NEW PRODUCTS
+          </h5>
         </div>
         <div class="contact-Right"></div>
       </div>
