added all elements needed for contact right wrap

--- a/src/index.html
+++ b/src/index.html
@@ -246,7 +246,16 @@
             BE THE FIRST TO KNOW ABOUT NEW PRODUCTS
           </h5>
         </div>
-        <div class="contact-Right"></div>
+        <div class="contact-Right">
+          <div class="contact-Right-Input-Wrap">
+            <input
+              class="contact-Right-Text-Input"
+              type="email"
+              placeholder="Enter Your Email"
+            />
+            <button class="contact-Right-Btn"></button>
+          </div>
+        </div>
       </div>
     </section>
     <!--  javascript links -->
