added new icon to the the input text button

--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,12 @@
               type="email"
               placeholder="Enter Your Email"
             />
-            <button class="contact-Right-Btn"></button>
+            <button class="contact-Right-Btn">
+              <i
+                id="contact-Right-Btn-Icon"
+                class="fa-solid fa-arrow-right"
+              ></i>
+            </button>
           </div>
         </div>
       </div>
