--- a/src/index.html
+++ b/src/index.html
@@ -263,6 +263,10 @@
         </div>
       </div>
     </section>
+    <!-- Footer -->
+    <section class="footer">
+      <div class="footer-Wrap"></div>
+    </section>
     <!--  javascript links -->
     <script type="module" src="menuLogic.js"></script>
     <script type="module" src="headerLogic.js"></script>
