added footer text 1 element with text

--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,9 @@
     </section>
     <!-- Footer -->
     <section class="footer">
-      <div class="footer-Wrap"></div>
+      <div class="footer-Wrap">
+        <h1 class="footer-Text-1">Ameer Ameen © All rights reserved</h1>
+      </div>
     </section>
     <!--  javascript links -->
     <script type="module" src="menuLogic.js"></script>
