added id , html scroll smooth and added small changes

--- a/src/index.html
+++ b/src/index.html
@@ -24,15 +24,15 @@
         <div class="navbar-Links">
           <ul>
             <li>
-              <a href="#">Home</a
+              <a href="#header">Home</a
               ><i id="nav-Icons" class="fa-solid fa-house"></i>
             </li>
             <li>
-              <a href="#">Meals</a
+              <a href="#meals">Meals</a
               ><i id="nav-Icons" class="fa-solid fa-utensils"></i>
             </li>
             <li>
-              <a href="#">Burger</a
+              <a href="#menu">Burger</a
               ><i id="nav-Icons" class="fa-solid fa-burger"></i>
             </li>
             <li>
@@ -40,7 +40,7 @@
               ><i id="nav-Icons" class="fa-solid fa-pizza-slice"></i>
             </li>
             <li>
-              <a href="#">Contact</a
+              <a href="#contact">Contact</a
               ><i id="nav-Icons" class="fas fa-blender-phone"></i>
             </li>
           </ul>
@@ -49,7 +49,7 @@
       <div class="nav-Btn-Line active"><div class="nav-Btn-Box"></div></div>
     </nav>
     <!-- Header -->
-    <section class="header">
+    <section class="header" id="header">
       <div class="header-Wrap">
         <div class="header-Titles-Wrap">
           <h1 class="header-Title-Text">Variety Of Foods</h1>
@@ -69,7 +69,7 @@
       </div>
     </section>
     <!-- Meals -->
-    <section class="meals">
+    <section class="meals" id="meals">
       <div class="meals-Wrap">
         <div class="meals-Top">
           <div class="meals-Top-Title-Wrap">
@@ -122,7 +122,7 @@
       </div>
     </section>
     <!-- Menu -->
-    <section class="menu">
+    <section class="menu" id="menu">
       <div class="menu-Wrap">
         <div class="menu-Top">
           <div class="menu-Top-Title-Wrap">
@@ -238,7 +238,7 @@
       </div>
     </section>
     <!-- Contact -->
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="contact-Wrap">
         <div class="contact-Left">
           <h1 class="contact-Left-Text-1">SIGN ME UP</h1>
